# fondy_payments_example

./: .env  Cargo.toml  README.md
migrations/: 20210502182131_remove_purchases.sql
src/: main.rs
src/application/: mod.rs
src/database/: mod.rs
src/error/: mod.rs
src/http/: handlers.rs  messages.rs  mod.rs  responses.rs  signature.rs
templates/: index.hbs
