[package]
name = "fondy_payments_example_rust"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2018"

[dependencies]
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
quick-error = "2.0.0"
tap = "1.0.1"
dotenv = "0.15.0"
tokio = { version = "1.5.0", features = ["full"] }
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
serde_with = "1.8.1"
reqwest = {version = "0.11.3", features = ["rustls-tls", "json"]}
reqwest_inspect_json = "0.0.8"
warp = "0.3.1"
sqlx = { version = "0.5.2", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
handlebars = "3.5.4"
url = "2.2.1"
sha-1 = "0.9.4"
uuid = { version = "0.8", features = ["v4"] }
human-panic = "=1.0"
bytes = "1.0.1"